# fastprocess

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: bench  forktest.py  fptest.py  old_fptest.py  sptest.py
fastprocess/: __init__.py  fastprocess.py  fp.py
